Report Use Cases

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -68,10 +68,11 @@ The scope of this module will be accessible to any user at this point in the dev
 	    	\label{fig:Report_Scope.png}
    	\end{figure}
 \subsubsection{Use cases}
-	\paragraph{Statistical Analysis: critical}
+	This section of the documentation will describe the use cases of the Report module.
+	\paragraph{Statistical Analysis - priority:critical}
 	User accessing this function will receive statistical analysis of the data for the chosen project.
 
-	\paragraph{Generate Graphs: critical}
+	\paragraph{Generate Graphs - priority:critical}
 	User accessing this function will receive a series of graphs of the data for the chosen project. 
 \subsubsection{Domain model}
 
