--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -7,7 +7,7 @@ This module is responsible for reading data from the client user database. It wi
 \paragraph{Test}
 \subsubsection{Use cases}
 \begin{itemize}
-\item Autorize
+\item Authorize
 \item validateUserName
 \item retrieveEmail
 \end{itemize}
