Added project scope to document

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -20,7 +20,12 @@ This module is responsible for reading data from the client user database. It wi
 The project module is responsible for the representation and persistence of all projects that the system will use to do the estimations on. This module will allow for complex projects to be created, as well as to be updated. A project is represented as a tree, consisting of a top-level project node and lower-level task nodes.
 
 \subsubsection{Scope}
-
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{projectScope}}
+	    	\caption{Estimation Scope}
+	    	\label{fig:Estimation_Scope}
+   	\end{figure}
 \subsubsection{Use cases}
 
 \paragraph{Create a project - priority: critical}
