--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -2,7 +2,8 @@
 %User Management
 %============================
 \subsection{User Management}
-This module is responsible for reading data from the client user database. It will do this by making use of ldap.js .
+This module is responsible for reading data from the client user database. It will do this by making use of ldap.js. This module will also retrieve the privileges a user has from the system's internal database.
+
 \subsubsection{Scope}
 \paragraph{Test}
 \subsubsection{Use cases}
@@ -13,8 +14,8 @@ Takes user's credentials to log him into the system.
 \paragraph{Authorize - priority: critical}
 Authorizes users with the right privileges to do what is requested.
 
-\paragraph{Logout - priority: critical}
-Disconnects user from the system.
+\paragraph{retrieveUserDetails - priority: important}
+This will get the details from the both the external and internal databases, to supply details to other modules in system as they need it.
 
 \subsubsection{Domain model}
 
