Expanded Report Use Case specificity

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -58,7 +58,7 @@ This enables users to update projects, if they have sufficient privileges, by ad
 %Report
 %============================
 \subsection{Report}
-The Report module will do statistical analysis on the data as well as draw graphs of the estimation data. This module will be responsible for any analysis of the data. It's functionality will be expanded as development continues.
+The Report module will do statistical analysis on the data as well as draw graphs of the estimation data. This module will be responsible for any analysis of the data. It's functionality will be expanded as development continues. This module will retrieve all the data it requires from the database and then process that data to produce an appropriate result.
 \subsubsection{Scope}
 The scope of this module will be accessible to any user at this point in the development, the only authorization that will take place is the initial log in of the user.
 	\begin{figure}[H]
@@ -71,7 +71,6 @@ The scope of this module will be accessible to any user at this point in the dev
 	This section of the documentation will describe the use cases of the Report module.
 	\paragraph{Statistical Analysis - priority:critical}
 	User accessing this function will receive statistical analysis of the data for the chosen project.
-
 	\paragraph{Generate Graphs - priority:critical}
 	User accessing this function will receive a series of graphs of the data for the chosen project. 
 \subsubsection{Domain model}
