Added service contract notification

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -104,4 +104,10 @@ This is the notification scope
 The main purpose of notifications is to notify users with the required message. The estimation module will supply the list of users to notify and the contents of the message.
 \paragraph{sendMesssage -- priority:niceToHave}
 \paragraph{createNotification -- priority:niceToHave}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.8\textwidth]{NotificationServiceContract}}
+	    	\caption{Notifications Service Contract}
+	    	\label{fig:Notification_Service Contract}
+   	\end{figure}
 \subsubsection{Domain model}
