--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -30,19 +30,41 @@ The scope of the Project module is shown in the figure below
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{projectScope}}
-	    	\caption{Estimation Scope}
-	    	\label{fig:Estimation_Scope}
+	    	\caption{Project Scope}
+	    	\label{fig:Project_Scope}
    	\end{figure}
 \subsubsection{Use cases}
 
 \paragraph{Create a project - priority: critical}
 Users with sufficient privileges can create projects. This will persist the project to the database.
 
+\begin{itemize}
+	\item Services contract:\\ \\
+	The createProjectRequest contains the name of the project as well as the user who is creating the project. The function will allow the user to expand on the project in order to build a comprehensive project tree.
+	\begin{figure}[H]
+    	\centering
+    	\fbox{\includegraphics[width=0.5\textwidth]{servicesContractcreateProject}}
+    	\caption{createProject services contract}
+    	\label{fig:createProject_services_contract}
+   	\end{figure}
+\end{itemize}
+
 \paragraph{Get project - priority: critical}
 Users with sufficient privileges can retrieve projects to view them, or to be used for other purposes. This use case must thus return a representation of the project-tree, and not produce the output of the project tree.
 
+\begin{itemize}
+	\item Services contract:\\ \\
+	The getProjectRequest contains the name of the Project that must be retrieved. The getProjectResult contains the Project that has been identified by the projectName.
+	\begin{figure}[H]
+    	\centering
+    	\fbox{\includegraphics[width=0.5\textwidth]{servicesContractgetProject}}
+    	\caption{getProject services contract}
+    	\label{fig:getProject_services_contract}
+   	\end{figure}
+\end{itemize}
+
 \paragraph{Hide project}
-Projects can be effectively deleted by hiding them, seeing as projects are not physically removed from the database. This action can only be done by authourised user.
+Projects can be effectively deleted by hiding them, seeing as projects are not physically removed from the database. This action can only be done by authorised user.
 
 \paragraph{Update project - priority: critical}
 This enables users to update projects, if they have sufficient privileges, by adding or removing task nodes to and from the project tree.
