--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -147,3 +147,9 @@ The estimation module will create a notification request and send in to the noti
 	    	\label{fig:Notification_Service Contract}
    	\end{figure}
 \subsubsection{Domain model}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.8\textwidth]{NotificationDomain}}
+	    	\caption{Domain Modelt}
+	    	\label{fig:Domain Model}
+   	\end{figure}
