--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -15,7 +15,7 @@ The scope of the Project module is shown in the figure below:
 \paragraph{Test}
 \subsubsection{Use cases}
 
-\paragraph{Login - priority: critical}s
+\paragraph{Login - priority: critical}
 Takes user's credentials to log him into the system.
 
 \paragraph{Authorize - priority: critical}
