Added Report Use Case images to document

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -141,8 +141,21 @@ The scope of this module will be accessible to any user at this point in the dev
 	This section of the documentation will describe the use cases of the Report module.
 	\paragraph{Statistical Analysis - priority:critical}
 	User accessing this function will receive statistical analysis of the data for the chosen project.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.8\textwidth]{Report_getStatistics}}
+	    	\caption{Statistical Analysis Service Contract}
+	    	\label{fig:Report_getStatistics.png Contract}
+   	\end{figure}
 	\paragraph{Generate Graphs - priority:critical}
 	User accessing this function will receive a series of graphs of the data for the chosen project. 
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.8\textwidth]{Report_GraphGeneration}}
+	    	\caption{Report Graph Generation Service Contract}
+	    	\label{fig:Report_GraphGeneration.png Contract}
+   	\end{figure}
+
 \subsubsection{Domain model}
 
 %============================
