--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -31,6 +31,16 @@ Takes user's credentials to log him into the system.
 
 \paragraph{Authorize - priority: critical}
 Authorizes users with the right privileges to do what is requested.
+\begin{itemize}
+	\item Services contract:\\ \\
+	The authorizationRequest contains only the user's id (the id alone, because user is already logged in) as a string. The authorizationResults contains the user's privileges.
+	\begin{figure}[H]
+    	\centering
+    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractAuthorization}}
+    	\caption{Authorization services contract}
+    	\label{fig:Authorization_services_contract}
+   	\end{figure}
+\end{itemize}
 
 \paragraph{retrieveUserDetails - priority: important}
 This will get the details from the both the external and internal databases, to supply details to other modules in system as they need it.
