Added Domain models of Estimation and Report

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -127,14 +127,33 @@ The domain model for the Project module requires that tasks being created and ad
 	This is the estimation scope
 	\begin{figure}[H]
 	    	\centering
-	    	\fbox{\includegraphics[width=0.5\textwidth]{Estimation_Scope}}
+	    	\fbox{\includegraphics[width=0.6\textwidth]{Estimation_Scope}}
 	    	\caption{Estimation Scope}
 	    	\label{fig:Estimation_Scope}
    	\end{figure}
 \subsubsection{Use cases}
 	\paragraph{estimateTask - priority:critical}This system will allow a user to place an estimation on a task.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.9\textwidth]{Estimation_estimateTask}}
+	    	\caption{Estimate Task}
+	    	\label{fig:Estimation_estimateTask.png}
+   	\end{figure}
 	\paragraph{calculateTotalEstimation - priority:critical}This system will traverse the project tree and calculate the total estimation of a project.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.9\textwidth]{Estimation_calculateTotalEstimation}}
+	    	\caption{Calculate total estimation}
+	    	\label{fig:Estimation_calculateTotalEstimation.png}
+   	\end{figure}
 \subsubsection{Domain model}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.9\textwidth]{Estimation_Domain}}
+	    	\caption{Estimation Domain}
+	    	\label{fig:Estimation_Domain.png}
+   	\end{figure}
+
 %============================
 %Report
 %============================
@@ -168,7 +187,12 @@ The scope of this module will be accessible to any user at this point in the dev
    	\end{figure}
 
 \subsubsection{Domain model}
-
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.9\textwidth]{Report_Domain}}
+	    	\caption{Report Domain}
+	    	\label{fig:Report_Domain.png}
+   	\end{figure}
 %============================
 %Notification
 %============================
