Update domain model
reason why usermanagement does not have a domain model

--- a/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
+++ b/documentation/Software Requirements Speciﬁcation and Technology Neutral Process Design/usecase.tex
@@ -56,6 +56,7 @@ This will get the details from the both the external and internal databases, to 
 \end{itemize}
 
 \subsubsection{Domain model}
+There is no domain model for this module, because it is purely an adapter that provides services to other modules in the system. The module does not persist information into the database.
 
 %============================
 %Project
