--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -28,7 +28,7 @@
 
 
 \begin{document}
-\title{Software Requirements Speciﬁcation and Technology Neutral Process Design}
+\title{Estimation Swarm User Manual}
 \subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}}
 
 \author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
@@ -45,7 +45,14 @@ Chris Cloete 13029721\\}
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{0.5em}
-\section{Introduction}
+\section{System Overview}
+\section{System Configuration}
+\section{Installation}
+The installation is quite a easy process 
+\section{Getting Started}
+\section{Using the system}
+\section{Troubleshooting}
+
 %just use \input{file} here
 	%\input{intro.tex}
 \end{document}
