--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -48,7 +48,7 @@ Chris Cloete 13029721\\}
 \section{System Overview}
 \section{System Configuration}
 \section{Installation}
-The installation is quite a easy process 
+	\input{Installation.tex}
 \section{Getting Started}
 \section{Using the system}
 \section{Troubleshooting}
