--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -1,2 +1,14 @@
-The installation is quite a easy process as we are using standard web technologies. We can deploy our system in one of two ways. Either we can use a docker image to load the system or we can set it up by loading all the dependancies to a machine.
+The installation is quite a easy process as we are using standard web technologies. We can deploy our system in one of two ways. Either we can use a docker image to load the system or we can set it up by loading all the dependancies to a machine. We are using the mean stack should you encounter any issues please consult their webpage. \url{http://mean.io}
 \subsection{Setting up the environment}
+To use our application the following prerequisites are required.
+\begin{itemize}
+	\item NPM(Node Package manager) and node.js 
+	For the latest information on installing npm please visit \url{https://nodejs.org/download/} Once you have this setup properly it is important to make usr you have the latest version installed.
+	\item GULP or BOWER for client side dependancies.
+	Either of these two technologies work with out stack and the can be installed by making use of npm.
+	\newline
+	npm install -g BOWER or npm install -g GULP 
+	\item MongoDB document database. Mongo has very different installation instructions thus it is best to consult the following website \url{https://www.mongodb.org}.
+	
+\end{itemize}
+
