--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -48,6 +48,7 @@ Chris Cloete 13029721\\}
 \section{System Overview}
 	\input{sysoverview.tex}
 \section{System Configuration}
+	\input{sysconfig.tex}
 \section{Installation}
 	\input{Installation.tex}
 \section{Getting Started}
