--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -56,4 +56,6 @@ Chris Cloete 13029721\\}
 \section{Troubleshooting}
 %just use \input{file} here
 	%\input{intro.tex}
+\section{Getting Started}
+	\input{gettingstarted.tex}
 \end{document}
