--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -11,7 +11,7 @@
 \setcounter{secnumdepth}{4}
 
 \DeclareGraphicsExtensions{.png}
-\graphicspath{ {../drawings/} }
+\graphicspath{ {img/} }
 
 
 \newcommand{\subtitle}[1]{%
