--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -16,7 +16,7 @@ To use our application the following prerequisites are required. Please note tha
 	\newline
 	npm install grunt-cli -g
 \end{itemize}
-Estimation swarm is now ready to be started. First make sure that your Mongodb is up and running. Now clone the project form gitHub by running the follwing command.
+Estimation swarm is now ready to be started. First make sure that your Mongodb is up and running. Now clone the project form gitHub by running the following command.
 \newline
 git clone \url{https://github.com/FrikkieSnyman/COS301_GroupProject.git}
 \newline
@@ -31,6 +31,10 @@ Running the grunt command in the relevant directory will start the server. This 
 	Production will load all the minified sources and also only non development dependancies. This is the method to use when running the server for commercial use.
 	\item{Secure} is just a enhanced version of production with added ssl security. For this environment to it requires the necessary certificates.
 \end{itemize}
-After this the server should be functioning and you can move on to getting started.
+After this the server should be functioning and you can move on to getting started. Check your favourite web browser and the server should be running on port 3000.
 \subsection{Using docker}
 This is still under development and will be implemented soon.
+\subsection{Deploying on the CLOUD}
+Changing environment setting to suite your current need is quite easy. Under your project directory there is a config folder. It contains all the variable that can be changed for the various services. Using passport.js for authentication allows you to integrate with the various services for authentication. We currently support Facebook, Google and Twitter authentication. Please visit \url{http://passportjs.org} for further instructions on how to configure this services.
+\subsection{Installation failures}
+Should the installation fail please make sure that all the MEAN.js dependancies are installed by visiting their website. If the issue cannot be resolved please log a issue on gitHub.
