added mean image

--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -1,3 +1,9 @@
+\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{MEAN}}
+	    	\caption{MEAN.js logo}
+	    	\label{fig:MEAN}
+   	\end{figure}
 The installation is quite a easy process as estimate swarm uses standard web technologies. We can deploy our system in one of two ways. Either it can use a docker image to load the system or it can set up by loading all the dependancies to a machine. Estimation swarm is using the mean stack should you encounter any issues please consult their webpage. \url{http://mean.io}. The github readme also houses the installation instructions.
 \subsection{Setting up the environment}
 To use our application the following prerequisites are required. Please note that installing packages globally requires that sudo command on linux and administrator privileges on windows.
