--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -40,7 +40,8 @@ Running the grunt command in the relevant directory will start the server. This 
 After this the server should be functioning and you can move on to getting started. Check your favourite web browser and the server should be running on port 3000.
 \subsection{Using docker}
 This is still under development and will be implemented soon.
-\subsection{Deploying on the CLOUD}
-Changing environment setting to suite your current need is quite easy. Under your project directory there is a config folder. It contains all the variable that can be changed for the various services. Using passport.js for authentication allows you to integrate with the various services for authentication. We currently support Facebook, Google and Twitter authentication. Please visit \url{http://passportjs.org} for further instructions on how to configure this services.
+\subsection{Deploying on your server}
+Changing environment setting to suite your current need is quite easy. Under your project directory there is a config folder. It contains all the variable that can be changed for the various services. Using passport.js for authentication allows you to integrate with the various services for authentication. We currently support Facebook, Google and Twitter authentication. Please visit \url{http://passportjs.org} for further instructions on how to configure this services. We recommend using digital ocean servers to run this project on. \url{https://www.digitalocean.com}
+
 \subsection{Installation failures}
 Should the installation fail please make sure that all the MEAN.js dependancies are installed by visiting their website. If the issue cannot be resolved please log a issue on gitHub.
