--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -54,6 +54,7 @@ Chris Cloete 13029721\\}
 \section{Getting Started}
 	\input{gettingstarted.tex}
 \section{Using the system}
+	\input{usesys.tex}
 \section{Troubleshooting}
 %just use \input{file} here
 	%\input{intro.tex}
