--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -27,6 +27,9 @@
 	    	\caption{Create Project Page}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
+\end{itemize}
+\subsection{Estimation Process}
+\begin{itemize}
 	\item{Create Project Tree}
 	\newline
 	From here you will have to create a project tree that represent the project that you need an estimation on. You can do this by adding nodes, by clicking on the "Add node" buttons, to the project tree and naming them appropriately. You can save the tree by clicking on the "Save Project" button to continue editing the tree at a later point. When you are satisfied with the tree, you can open it for estimation, by clicking on the "Open For Estimation" button. After the project has been opened for estimation, it can not be edited again. Emails will be sent out the users that were chosen to estimate on the project to inform them that the project is now available for estimation.
