--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -55,6 +55,7 @@ Chris Cloete 13029721\\}
 	\input{gettingstarted.tex}
 \section{Using the system}
 \section{Troubleshooting}
+	\input{troubleshooting.tex}
 %just use \input{file} here
 	%\input{intro.tex}
 
